# TutliManager

./: .gitignore  CMakeLists.txt  TutliManager.pro  TutliManager.pro.user.74db37f  converter.cpp  converter.h.autosave  res.qrc  widget.cpp  widget.h  widget.ui  worker.cpp  worker.h
src/: main.cpp  res.qrc
src/core/: Helper.h  MapsData.h  MapsData.h~RF1b64a415.TMP  basedetector.cpp  basedetector.h  converter.cpp  converter.h  durationlogger.cpp  durationlogger.h  logger.h  mapnamedetector.cpp  mapnamedetector.h  mapsizedetector.cpp  mapsizedetector.h  tutlscontroller.cpp  tutlscontroller.h  worker.cpp  worker.h
src/ui/: MoveControllerWidget.cpp  MoveControllerWidget.h  widget.cpp  widget.h
